# trading-control

./: .coverage  .env.example  .gitignore  FEATURE_SUMMARY.md  README.md  __init__.py  claude_code_template.py  config.py  coverage.xml  jest.config.js  logger.py  main.py  main_simple.py  memory.py  next.config.js  orchestrator.py  package-lock.json  package.json  professional_trading_orchestrator.py  pyproject.toml  pytest.ini  pytest_working.ini  requirements.txt  setup.cfg  tasks.py  test_routes.py  tools.py  trading_state.json  tsconfig.json  tsconfig.tsbuildinfo  utils.py  verify_local.py
.github/: CODEOWNERS  DEFAULT_BRANCH.md  branch-protection.yml  pull_request_template.md
.github/workflows/: ci-simple.yml  ci.yml  ci_windows.yml  pr-review.yml
.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/cache/eslint/: .cache_ib6hbx
.next/server/: middleware-build-manifest.js  pages-manifest.json
.next/server/chunks/: 101.js  757.js
.next/server/pages/: 404.html  500.html  _app.js.nft.json  _document.js.nft.json  (+7 more)
agent/: __init__.py  agent_contract.py  business_analyst.py  sentiment_analyst.py  technical_analyst.py
api/: __init__.py  models.py  routes.py  simple_routes.py  working_routes.py
api/routes/: __init__.py  agents.py  data.py  monitoring.py  orchestrator.py
core/: __init__.py  agent_manager.py  config.py  data_manager.py  langfuse_client.py  metrics.py  orchestrator.py  task_queue.py  websocket_manager.py
docs/: architecture.md  testing.md
gateway/: __init__.py  agent_endpoints.py  openclaw_gateway.py
monitoring/: __init__.py
observability/: __init__.py  events.py  langfuse_client.py  simple_observability.py
src/: __init__.py
src/core/: __init__.py  logger.py  main.py  stateful_logging_system.py
src/pages/: dashboard.tsx  film-room.tsx  index.tsx
src/styles/: globals.css
src/system/: __init__.py  claude_code_template.py  production_trading_system.py  professional_trading_orchestrator.py
src/types/: dashboard.ts
src/utils/: dashboard.ts
tests/: comprehensive_tests.py  conftest.py  test_api.py  test_basic.py  test_clean_architecture.py  test_config.py  test_logger.py  test_memory.py  test_orchestrator.py  test_tasks.py  test_tools.py  test_trading_system.py  test_utils.py
trading-agent-orchestration/: SKILL.md
trading-agent-orchestration/references/: agent-architecture.md
trading-agent-orchestration/scripts/: orchestrator.py
trading-agent-orchestration/tests/: test_skill.py
trading-claude-integration/: SKILL.md
trading-claude-integration/references/: claude-integration.md
trading-claude-integration/scripts/: claude_integration.py
trading-data-validation/: SKILL.md
trading-data-validation/references/: validation-rules.md
trading-data-validation/scripts/: field_validator.py
trading-data-validation/tests/: test_skill.py
trading-market-data/: SKILL.md
trading-market-data/references/: api-documentation.md
trading-market-data/scripts/: market_data.py
trading-market-data/tests/: test_skill.py
trading-professional-orchestrator/: SKILL.md
trading-professional-orchestrator/references/: safety-protocols.md  state-machine-design.md
trading-professional-orchestrator/scripts/: __init__.py
trading-system-monitoring/: SKILL.md
trading-system-monitoring/references/: monitoring-specs.md
trading-system-monitoring/scripts/: health_checker.py
trading-system-monitoring/tests/: test_skill.py
(+17 files in other folders)
